# workout-api

./: .dockerignore  .env.app.example  .env.test.example  .gitignore  docker-compose.test.yml  docker-compose.yml  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 1fa3d4ac3bfe_seed_muscles.py  418da07ae4a0_initial_schema_with_uuid_ids.py  50845d240258_create_users_table.py  8dfa64d433d7_add_exercises_and_muscles.py  b103fc04bbfe_seed_muscles.py  c4f81288a54a_fix_muscle_role_enum_typo.py
app/: main.py
app/api/: auth.py  dependencies.py  exception_handlers.py  exercises.py  health.py  muscles.py  routes.py  users.py
app/core/: auth.py  config.py  database.py  passwords.py  security.py
app/domain/: errors.py
app/models/: __init__.py  exercise.py  exercise_muscle.py  muscle.py  user.py
app/repositories/: exercise.py  muscle.py  user.py
app/schemas/: exercise.py  muscle.py  user.py
app/services/: exercise.py  muscle.py  user.py
docker/: Dockerfile
tests/: conftest.py  helpers.py  test_auth.py  test_exercises.py  test_users.py
